--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@ He has already worked on hands-on builds such as line follower robots, automatic
 His projects often combine practical electronics with creative problem-solving, aiming to make concepts easy to demonstrate and fun to use.
 Beyond schoolwork, he has a strong personal interest in YouTube content creation, where he showcases DIY experiments and learning tutorials.
 His passion lies in technology, innovation, and sharing knowledge, reflecting both a maker mindset and an eagerness to inspire others.</p>
-<h1>Selvam</h1>
+<h1>Selvam Dakshnamoorthy</h1>
 <img width="200px" src="Selva.jpeg" alt="">
 <p>Best of luck Selva</p>
 <p>test2</p>
